Added check for 'word not found'. Added progressBar. Still no list though

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SpanishDist</string>
+    <string name="entry_not_found">Entry not found</string>
 </resources>
